Sec12_Chap136-XXX: code optimization